Fixed z-indexes

--- a/src/index.css
+++ b/src/index.css
@@ -65,13 +65,15 @@ nav {
     position: absolute;
     background-color: violet;
     opacity: 0;
-    transition: all 0.6s ease;
+    transition: opacity 0.6s ease;
     width: 100%;
     height: 100vh;
+    z-index: -10;
 }
 
 nav.active {
     opacity: 1;
+    z-index: 10;
 }
 
 nav.active nav ul {
@@ -87,7 +89,6 @@ nav ul > li > a {
     font-family: Helvetica, sans-serif;
 }
 
-nav,
 #hamburger {
     z-index: 10;
 }
@@ -144,28 +145,26 @@ nav,
 #map-container {
     display: inline-block;
     position: relative;
-    margin-left: 1vw;
-    /* text-align: center; */
 }
 
 .picto-container {
+    /* border: 1px solid red; */
     position: absolute;
     top: 0;
 }
 .picto-container > img {
     width: 13vw;
     opacity: 0.5;
-    transition: all 0.5s ease;
+    transition: opacity 0.5s ease;
 }
 .picto-container > h4 {
     position: absolute;
     width: 100%;
     text-align: center;
-    bottom: 0;
+    bottom: 8%;
 }
 
 #map-container img.active {
-    /* border: 1px solid red; */
     opacity: 1;
 }
 
@@ -181,13 +180,13 @@ nav,
     top: 48%;
 }
 .picto-container:nth-child(4) h4 {
-    bottom: -10%;
+    bottom: 0;
 }
 .picto-container:nth-child(5) {
     top: 72%;
 }
 .picto-container:nth-child(5) h4 {
-    bottom: -15%;
+    bottom: 0;
 }
 
 footer {
